# J2V8

.github/workflows/: build_and_release.yml  build_and_test.yml  main.yml
jni/: CMakeLists.txt  com_eclipsesource_v8_V8Impl.cpp  com_eclipsesource_v8_V8Impl.h
src/main/java/com/eclipsesource/v8/: V8.java
src/test/java/com/eclipsesource/v8/: V8Test.java
v8/: Dockerfile  install-deps.sh
